# svg_animated_qt

./: .gitignore  PROMPT_QT.md  README.md  app.js  index.html  install.sh  serve-node.bat  serve.bat  serve.py  serve.sh  styles.css
.opencode/skills/svg-animator/: SKILL.md
docs/: ANIMATIONS.md  CONTROLS.md  DEVELOPMENT.md  EXPORT.md  INSTALLATION.md  PIECES.md  README.md  RULES.md  TODO.md
qt/: CMakeLists.txt  build.bat  build.sh  run.bat  run.sh
qt/src/: AnimationEngine.cpp  AnimationEngine.h  BackgroundImageManager.cpp  BackgroundImageManager.h  ControlsWidget.cpp  ControlsWidget.h  ElementPanel.cpp  ElementPanel.h  ExportManager.cpp  ExportManager.h  MainWindow.cpp  MainWindow.h  Shapes.cpp  Shapes.h  SlideshowManager.cpp  SlideshowManager.h  SvgView.cpp  SvgView.h  Theme.cpp  Theme.h  TrajectoryManager.cpp  TrajectoryManager.h  WorkspaceManager.cpp  WorkspaceManager.h  main.cpp
